  the -depends option on the command line. It produces, along with the
  X.tex file, a X.tex.depends file containing a hash of all Mlpost figures.
  If you have your own Makefile, you may add a dependency between the
  .ps or .pdf to this .tex.depends file to ensure the final document is
  recompiled if a figure changes.
- -classic-display is not passed to recent mlpost versions which do not
handle it

Latex library:
- packages used by commands in ~title, ~author, ~date and ~prelude of the
document function are now taken into account
- figure caption may be placed at the side (?side_caption)
- figures may be wide (?wide)
- wrapfigure, floatingfigure, subfloat
- beamer colors may be given using rgb values
- ~underscore argument for pseudocode verbatim function
- equation
- index_exponent
- variables (similar in use to LaTeX counters, but evaluated when
  pretty-printing the .tex file)
- empty, is_empty
- more delimiters, just_left, just_right, between
- index functionalities
- support of multicolumn via the 'layout' optional argument of 'array_line'
- and (many) various other latex commands

Other:
* module Version renamed to Melt_version

Version 1.2.0
=============

Configuration, Compilation and Installation
- Default installation directory is now OCAMLLIB/melt, where OCAMLLIB is
either: the default installation directory of ocamlfind, or
the standard directory of caml if ocamlfind is not available.
- (bugfix) Do not link with mlpost if MLPOST = NO.

Melt tool and library:
- Add -latex file.tex option to Mlpost to compute prelude, if the tex file
already exists.
- Cairo support for Mlpost 0.7
* ?pdf argument for mlpost becomes ?mode
- -mlpost option
- -mlpost-no-prelude option

Preprocessor:
- Print opened and pending modes in unexpected end of file errors
- Print an error if a "}" appears in text or math mode

Latex library:
- (bugfix) the ~center option of figure has been fixed
- phantom, vphantom, hphantom
- Beamer overlays
- makebox, framebox